--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
   <div id="scene">
      <div id="baggrund"></div>
      <div id="mellemgrund"></div>
+     <div id="oskar_container" class="move_right">
+        <div id="oskar_sprite" class="oskar_walkcycle"></div>
+     </div>
+     <div id="dreng1_container" class="">
+        <div id="dreng1_sprite" class="dreng1_laughcycle"></div>
+     </div>
+     <div id="dreng2_container" class="">
+        <div id="dreng2_sprite" class="dreng2_laughcycle"></div>
+     </div>
      <div id="forgrund"></div>
+
+
   </div>
 
 
