--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <div id="scene">
      <div id="baggrund"></div>
      <div id="mellemgrund"></div>
-     <div id="oskar_container" class="move_right">
-        <div id="oskar_sprite" class="oskar_walkcycle"></div>
+     <div id="forgrund"></div>
+     <div id="oskar_container" class="pose">
+        <div id="oskar_sprite" class="oskar_up"></div>
      </div>
      <div id="dreng1_container" class="">
         <div id="dreng1_sprite" class="dreng1_laughcycle"></div>
@@ -20,7 +21,10 @@
      <div id="dreng2_container" class="">
         <div id="dreng2_sprite" class="dreng2_laughcycle"></div>
      </div>
-     <div id="forgrund"></div>
+     <div id="bruser_container" class="dryp_pose">
+         <div id="bruser_sprite" class="bruser_dryp"></div>
+     </div>
+
 
 
   </div>
