--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
      <div id="bruser_container" class="dryp_pose">
          <div id="bruser_sprite" class="bruser_dryp"></div>
      </div>
+     <div id="hand_container">
+         <div id="hand_sprite"></div>
+     </div>
 
 
 
