--- a/index.html
+++ b/index.html
@@ -11,23 +11,34 @@
   <div id="scene">
      <div id="baggrund"></div>
      <div id="mellemgrund"></div>
-     <div id="forgrund"></div>
-     <div id="oskar_container" class="pose">
-        <div id="oskar_sprite" class="oskar_up"></div>
-     </div>
-     <div id="dreng1_container" class="">
-        <div id="dreng1_sprite" class="dreng1_laughcycle"></div>
-     </div>
-     <div id="dreng2_container" class="">
-        <div id="dreng2_sprite" class="dreng2_laughcycle"></div>
-     </div>
      <div id="bruser_container" class="dryp_pose">
          <div id="bruser_sprite" class="bruser_dryp"></div>
      </div>
-     <div id="hand_container">
-         <div id="hand_sprite"></div>
-     </div>
 
+     <div id="dreng1_container" class="dreng1_move_right">
+        <div id="dreng1_sprite" class="dreng1_walkcycle"></div>
+     </div>
+     <div id="dreng2_container" class="dreng2_move_right">
+        <div id="dreng2_sprite" class="dreng2_walkcycle"></div>
+     </div>
+     <div id="oskar_container" class="move_right">
+        <div id="oskar_sprite" class="oskar_walkcycle"></div>
+     </div>
+     <div id="forgrund"></div>
+     <div id="haand_container" class="haand_ind_pose">
+         <div id="haand_sprite" class="haand_tryk"></div>
+     </div>
+     <div id="indhold_container">
+         <div id="billede_1"></div>
+         <div id="billede_2"></div>
+         <div id="billede_3"></div>
+         <div id="billede_4"></div>
+         <div id="billede_5"></div>
+         <div id="billede_6"></div>
+         <div id="billede_7"></div>
+         <div id="billede_8"></div>
+         <div id="billede_9"></div>
+     </div>
 
 
   </div>
