--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div id="scene">
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
+        <button id="valg1"></button>
+        <button id="valg2"></button>
         <div id="bruser_container" class="">
             <div id="bruser_sprite" class=""></div>
         </div>
@@ -41,7 +43,7 @@
 
 
     </div>
-<<<<<<< HEAD
+
     <!-- Audio-->
     <audio id="bruseren_drypper" src="lyde/water-dripping-splash-loopable.wav"> Your browser does not support the audio element. </audio>
     <audio id="haandklaedeNed" src="lyde/Cartoon%20Toy%20Gun%20Shoot%20Pellet%2001.wav"> Your browser does not support the audio element. </audio>
@@ -52,9 +54,7 @@
     <audio id="klorHaar" src="lyde/Human%20Beard%20Scratching%20Beard%2004.wav"> </audio>
     <audio id="ikkeSlettetBilleder" src="lyde/Human%20Crowd%20Disgusted%20Aww%2003.wav"> </audio>
     <!-- Audio-->
-=======
 
->>>>>>> origin/master
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="action.js"></script>
 </body>
