--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css"> </head>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 <body>
     <div id="scene">
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
-        <button id="valg1"></button>
-        <button id="valg2"></button>
+
+
         <div id="bruser_container" class="">
             <div id="bruser_sprite" class=""></div>
         </div>
         <div id="dreng1_container" class="">
             <div id="dreng1_sprite" class=""></div>
         </div>
-        <div id="dreng2_container" class="t">
+        <div id="dreng2_container" class="">
             <div id="dreng2_sprite" class=""></div>
         </div>
         <div id="oskar_container" class="">
@@ -40,7 +41,14 @@
             <div id="billede_8"></div>
             <div id="billede_9"></div>
         </div>
-
+        <div id="valg1_container">
+            <button id="valg1">BED OM AT<br>
+ SLETTE
+BILLEDERNE</button>
+        </div>
+        <div id="valg2_container">
+            <button id="valg2">GRIN MED FLOKKEN</button>
+        </div>
 
     </div>
 
