--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <div id="scene">
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
-<<<<<<< HEAD
-=======
-
-
->>>>>>> origin/master
         <div id="bruser_container" class="">
             <div id="bruser_sprite" class=""></div>
         </div>
@@ -44,19 +39,13 @@
             <div id="billede_8"></div>
             <div id="billede_9"></div>
         </div>
-<<<<<<< HEAD
-=======
-        <div id="valg1_container">
-            <button id="valg1">BED OM AT<br>
- SLETTE
-BILLEDERNE</button>
-        </div>
-        <div id="valg2_container">
-            <button id="valg2">GRIN MED FLOKKEN</button>
-        </div>
-
->>>>>>> origin/master
+        <<<<<<< HEAD=======< div id="valg1_container">
+            <button id="valg1">BED OM AT
+                <br> SLETTE BILLEDERNE</button>
     </div>
+    <div id="valg2_container">
+        <button id="valg2">GRIN MED FLOKKEN</button>
+    </div> >>>>>>> origin/master </div>
     <!-- Audio-->
     <audio id="bruseren_drypper" src="lyde/water-dripping-splash-loopable.wav"> Your browser does not support the audio element. </audio>
     <audio id="haandklaedeNed" src="lyde/Cartoon%20Toy%20Gun%20Shoot%20Pellet%2001.wav"> Your browser does not support the audio element. </audio>
