js + html ændring

--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <div id="scene">
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
-<<<<<<< HEAD
-=======
-
-
->>>>>>> origin/master
         <div id="bruser_container" class="">
             <div id="bruser_sprite" class=""></div>
         </div>
@@ -33,21 +28,20 @@
         <div id="haand_container" class="">
             <div id="haand_sprite" class=""></div>
         </div>
-        <div id="indhold_container">
-            <div id="billede_1"></div>
-            <div id="billede_2"></div>
-            <div id="billede_3"></div>
-            <div id="billede_4"></div>
-            <div id="billede_5"></div>
-            <div id="billede_6"></div>
-            <div id="billede_7"></div>
-            <div id="billede_8"></div>
-            <div id="billede_9"></div>
+        <div id="indhold_container" class="">
+            <div id="billede_1" class="pos1 nude"></div>
+            <div id="billede_2" class="pos2 nude"></div>
+            <div id="billede_3" class="pos3 nude"></div>
+            <div id="billede_4" class="pos4 nude"></div>
+            <div id="billede_5" class="pos5 nude"></div>
+            <div id="billede_6" class="pos6 nude"></div>
+            <div id="billede_7" class="pos7 nude"></div>
+            <div id="billede_8" class="pos8 nude"></div>
+            <div id="billede_9" class="pos9 nude"></div>
+            <div id="billede_10" class="pos5"></div>
         </div>
-<<<<<<< HEAD
-=======
-        <div id="valg1_container">
 
+        <div id="valg1_container">
             <button id="valg1">BED OM AT<br>
  SLETTE
 BILLEDERNE</button>
@@ -56,7 +50,7 @@ BILLEDERNE</button>
             <button id="valg2">GRIN MED FLOKKEN</button>
         </div>
 
->>>>>>> origin/master
+
     </div>
     <!-- Audio-->
     <audio id="bruseren_drypper" src="lyde/water-dripping-splash-loopable.wav"> Your browser does not support the audio element. </audio>
@@ -68,6 +62,8 @@ BILLEDERNE</button>
     <audio id="klorHaar" src="lyde/Human%20Beard%20Scratching%20Beard%2004.wav"> </audio>
     <audio id="ikkeSlettetBilleder" src="lyde/Human%20Crowd%20Disgusted%20Aww%2003.wav"> </audio>
     <!-- Audio-->
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="action.js"></script>
 </body>
