--- a/index.html
+++ b/index.html
@@ -29,18 +29,17 @@
             <div id="haand_sprite" class=""></div>
         </div>
         <div id="indhold_container" class="">
-            <div id="billede_1" class="pos1 nude"></div>
-            <div id="billede_2" class="pos2 nude"></div>
-            <div id="billede_3" class="pos3 nude"></div>
-            <div id="billede_4" class="pos4 nude"></div>
-            <div id="billede_5" class="pos5 nude"></div>
-            <div id="billede_6" class="pos6 nude"></div>
-            <div id="billede_7" class="pos7 nude"></div>
-            <div id="billede_8" class="pos8 nude"></div>
-            <div id="billede_9" class="pos9 nude"></div>
+            <div id="nude" class="pos1 billede_1"></div>
+            <div id="nude" class="pos2 billede_2"></div>
+            <div id="nude" class="pos3 billede_3"></div>
+            <div id="nude" class="pos4 billede_4"></div>
+            <div id="nude" class="pos5 billede_5"></div>
+            <div id="nude" class="pos6 billede_6"></div>
+            <div id="nude" class="pos7 billede_7"></div>
+            <div id="nude" class="pos8 billede_8"></div>
+            <div id="nude" class="pos9 billede_9"></div>
             <div id="billede_10" class="pos5"></div>
         </div>
-
         <div id="valg1_container">
             <button id="valg1">BED OM AT<br>
  SLETTE
@@ -48,6 +47,9 @@ BILLEDERNE</button>
         </div>
         <div id="valg2_container">
             <button id="valg2">GRIN MED FLOKKEN</button>
+        </div>
+        <div id="text_container">
+            <button id="text" class="pulse2">SLET ALLE BILLEDERNE!</button>
         </div>
 
 
