--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <div id="haand_sprite" class=""></div>
         </div>
         <div id="indhold_container" class="">
-            <div id="nude" class="pos1 billede_1"></div>
-            <div id="nude" class="pos2 billede_2"></div>
-            <div id="nude" class="pos3 billede_3"></div>
-            <div id="nude" class="pos4 billede_4"></div>
-            <div id="nude" class="pos5 billede_5"></div>
-            <div id="nude" class="pos6 billede_6"></div>
-            <div id="nude" class="pos7 billede_7"></div>
-            <div id="nude" class="pos8 billede_8"></div>
-            <div id="nude" class="pos9 billede_9"></div>
+            <div id="nudes" class="pos1 billede_1"></div>
+            <div id="nudes" class="pos2 billede_2"></div>
+            <div id="nudes" class="pos3 billede_3"></div>
+            <div id="nudes" class="pos4 billede_4"></div>
+            <div id="nudes" class="pos5 billede_5"></div>
+            <div id="nudes" class="pos6 billede_6"></div>
+            <div id="nudes" class="pos7 billede_7"></div>
+            <div id="nudes" class="pos8 billede_8"></div>
+            <div id="nudes" class="pos9 billede_9"></div>
             <div id="billede_10" class="pos5"></div>
         </div>
         <div id="valg1_container">
