--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <div id="haand_sprite" class=""></div>
         </div>
         <div id="indhold_container" class="">
-            <div id="nudes" class="pos1 billede_1"></div>
-            <div id="nudes" class="pos2 billede_2"></div>
-            <div id="nudes" class="pos3 billede_3"></div>
-            <div id="nudes" class="pos4 billede_4"></div>
-            <div id="nudes" class="pos5 billede_5"></div>
-            <div id="nudes" class="pos6 billede_6"></div>
-            <div id="nudes" class="pos7 billede_7"></div>
-            <div id="nudes" class="pos8 billede_8"></div>
-            <div id="nudes" class="pos9 billede_9"></div>
+            <div id="nudes" class="pos1 billede_1 tryk"></div>
+            <div id="nudes" class="pos2 billede_2 tryk"></div>
+            <div id="nudes" class="pos3 billede_3 tryk"></div>
+            <div id="nudes" class="pos4 billede_4 tryk"></div>
+            <div id="nudes" class="pos5 billede_5 tryk"></div>
+            <div id="nudes" class="pos6 billede_6 tryk"></div>
+            <div id="nudes" class="pos7 billede_7 tryk"></div>
+            <div id="nudes" class="pos8 billede_8 tryk"></div>
+            <div id="nudes" class="pos9 billede_9 tryk"></div>
             <div id="billede_10" class="pos5"></div>
         </div>
         <div id="valg1_container">
@@ -64,7 +64,6 @@ BILLEDERNE</button>
     <audio id="klorHaar" src="lyde/Human%20Beard%20Scratching%20Beard%2004.wav"> </audio>
     <audio id="ikkeSlettetBilleder" src="lyde/Human%20Crowd%20Disgusted%20Aww%2003.wav"> </audio>
     <!-- Audio-->
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="action.js"></script>
