--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
 
 <body>
     <div id="scene">
+
+        <div id="start_container">
+            <button id="start">START</button>
+        </div>
+
+        <div id="link_container">
+           <a href="http://privatsnak.dk/" target="_blank">
+            <div id="link" alt="privatsnak.dk"></div>
+        </a>
+        </div>
+
+        <div id="link2_container">
+            <a href="http://privatsnak.dk/" target="_blank">
+                <div id="link2" alt="privatsnak.dk"></div>
+            </a>
+        </div>
+
+        <div id="startskaerm"></div>
+        <div id="slutskaerm"></div>
+
         <div id="baggrund"></div>
         <div id="mellemgrund"></div>
         <div id="bruser_container" class="">
@@ -38,7 +58,8 @@
             <div id="nudes" class="pos7 billede_7 tryk"></div>
             <div id="nudes" class="pos8 billede_8 tryk"></div>
             <div id="nudes" class="pos9 billede_9 tryk"></div>
-            <div id="billede_10" class="pos5"></div>
+            <div id="billede_10" class="pos01"></div>
+            <div id="billede_11" class="pos01"></div>
         </div>
         <div id="valg1_container">
             <button id="valg1">BED OM AT
