--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             </a>
         </div>
 
+        <div id="god_slutning">
+            <button id="text2" class="pulse2">DINE BILLEDER BLEV SLETTET!</button>
+        </div>
+        <div id="bad_slutning">
+            <button id="text3" class="pulse2">DINE BILLEDER BLEV DELT.</button>
+        </div>
+
         <div id="startskaerm"></div>
         <div id="slutskaerm"></div>
 
