tilføjet js og html og css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 <body>
+
     <div id="scene">
+
         <div id="start_container">
             <button id="start">START</button>
         </div>
@@ -24,12 +26,8 @@
             </a>
         </div>
 
-        <div id="god_slutning">
-            <button id="text2" class="pulse2">DINE BILLEDER BLEV SLETTET!</button>
-        </div>
-        <div id="bad_slutning">
-            <button id="text3" class="pulse2">DINE BILLEDER BLEV DELT.</button>
-        </div>
+        <div id="god_slutning"></div>
+        <div id="bad_slutning"></div>
 
         <div id="startskaerm"></div>
         <div id="slutskaerm"></div>
